--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ tokio = {version = "1.43.0", features = ["full"]}
 hyper = { version = "1", features = ["full"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
+log = "0.4.25"
+env_logger = "0.11.6"
