--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
 log = "0.4.25"
 env_logger = "0.11.6"
+serde_yaml = "0.9.34"
+serde = { version = "1.0.217", features = ["derive"]}
+serde_derive = "1.0.217"
+derive-getters = "0.5.0"
