--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 http = "1.3.1"
 tokio = {version = "1.45.1", features = ["full"]}
-hyper = { version = "1", features = ["full"] }
+hyper = { version = "1.6", features = ["full"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
 log = "0.4.27"
@@ -15,3 +15,4 @@ serde_yaml = "0.9.34"
 serde = { version = "1.0.219", features = ["derive"]}
 serde_derive = "1.0.219"
 derive-getters = "0.5.0"
+anyhow = "1.0"
