feat: ensure a HTTP client is reused across all client connections to enable connection pooling in keep alive

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0.219", features = ["derive"]}
 serde_derive = "1.0.219"
 derive-getters = "0.5.0"
 anyhow = "1.0"
+derive-new = "0.7.0"
