--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,13 @@ hyper = { version = "1.6", features = ["full"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
 log = "0.4.27"
-env_logger = "0.11.8"
 serde_yaml = "0.9.34"
 serde = { version = "1.0.219", features = ["derive"]}
 serde_derive = "1.0.219"
 derive-getters = "0.5.0"
 anyhow = "1.0"
 derive-new = "0.7.0"
+tracing = {version = "0.1.41", features = ["log"]}
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.2"
