--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,5 @@ serde_derive = "1.0.219"
 derive-getters = "0.5.0"
 anyhow = "1.0"
 derive-new = "0.7.0"
-tracing = {version = "0.1.41", features = ["log"]}
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
-tracing-bunyan-formatter = "0.3"
-tracing-log = "0.2"
+env_logger = "0.11.8"
+
