--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,8 @@ derive-getters = "0.5.0"
 anyhow = "1.0"
 derive-new = "0.7.0"
 env_logger = "0.11.8"
+futures-util = "0.3.31"
 
+[dev-dependencies]
+bollard = "0.19.2"
+reqwest = "0.12.23"
