feat: add scheme to backends config

--- a/example/example-backends.yaml
+++ b/example/example-backends.yaml
@@ -1,16 +1,20 @@
 ---
 bindInterface: "0.0.0.0"
 bindPort: 5001
+scheme: http
 backends:
   - host: example-target-1
     port: 80
     healthPath: "/"
+    scheme: http
   - host: example-target-2
     port: 80
     healthPath: "/"
+    scheme: http
   - host: example-target-3
     port: 80
     healthPath: "/"
+    scheme: http
 healthCheck:
   interval: 60
   failureThreshold: 3
